--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
-remote_theme: pages-themes/cayman@v0.2.0
-# remote_theme: pages-themes/time-machine@v0.2.0
-# remote_theme: pages-themes/merlot@v0.2.0
-# remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+theme: null
+title: "X-DriverSim: Diverse Driver Simulation Platform"
+description: "Official project page for X-DriverSim: LLM-powered interactive driving simulation with diverse driver behaviors."
